# tworld

./: .gitignore  BUGS  CMakeLists.txt  Changelog  INSTALL  Makefile  README  cmdline.c  common.mak  configure  defs.h  encoding.c  err.h  fileio.c  fileio.h  gen.h  help.c  help.h  logic.c  lxlogic.c  messages.cpp  mslogic.c  oshw  oshw.h  play.c  play.h  score.cpp  score.h  series.c  series.h  settings.cpp  settings.h  solution.c  state.h  tworld.c  tworld.rc  tworld2.qrc  tworld2.rc  unslist.c  userout.c  (+1 more)
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  win-ci.yml
data/: CCLP1.ccx  CCLP2.ccx  CCLP3.ccx  CCLP4.ccx  CCLP5.ccx  CCLXP2.ccx
docs/: tworld.6  tworld.html  tworld2.6  tworld2.html
docs/CCLP docs/: CCLP1.html
docs/CCLP docs/cclp1res/: CCLP1.css
docs/CCLP docs/cclp3res/: a.html  b.html  c.html
docs/CCLP1/: CCLP1.html
docs/CCLP1/cclp1res/: c.html  d.html
docs/CCLP3/: CCLP3.html
docs/CCLP3/cclp3res/: d.html
docs/CCLP4/: CCLP4.html
docs/CCLP4/cclp4res/: a.html  b.html
docs/CCLP5/: CCLP5.html
docs/CCLP5/cclp5res/: CCLP5.css  a.html  b.html
docs/cclp1res/: a.html  b.html
docs/cclp3res/: CCLP3.css
generic/: generic.h  in.c  tile.c
oshw-qt/: CCMetaData.cpp  CCMetaData.h  CMakeLists.txt  TWApp.cpp  TWApp.h  TWDisplayWidget.h  TWMainWnd.cpp  TWMainWnd.h  TWMainWnd.ui  TWProgressBar.cpp  TWProgressBar.h  TWSfx.cpp  TWSfx.h  TWTextCoder.cpp  TWTextCoder.h  makefile  oshwbind.cpp  oshwbind.h
oshw-sdl/: CMakeLists.txt  Makefile  makefile  oshwbind.c  sdloshw.c  sdlout.c  sdlsfx.c
sets/: CCLP1-Lynx.dac  CCLP1-MS.dac  CCLP3-Lynx.dac  CCLP3-MS.dac  CCLP4-Lynx.dac  CCLP4-MS.dac  CCLP5-Lynx.dac  CCLP5-MS.dac  CCLXP2.dac
